# task-manager-api/server.js
@@ -4,6 +4,7 @@ const taskRoutes = require("./routes/taskRoutes");
 const userRoutes = require("./routes/userRoutes");
 const swaggerUi = require("swagger-ui-express");
 const swaggerDocument = require("./swagger.json");
+const errorHandler = require("./middleware/errorHandler");
 
 dotenv.config();
 const app = express();
@@ -12,9 +13,16 @@ app.use(express.json());
 const connectDB = require("./config/db");
 connectDB();
 
+// Root route welcome message
+app.get("/", (req, res) => {
+  res.send("Welcome to the Task Manager API");
+});
+
 app.use("/api", taskRoutes);
 app.use("/api", userRoutes);
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
+
+app.use(errorHandler);
 
 const PORT = process.env.PORT || 5000;
 app.listen(PORT, () => console.log(`Server running on port ${PORT}`));
